syntax = "proto3";

package data;

message FilterConfig {

  enum Operation {
    SKIP = 0;
    ADD = 1;
    REMOVE = 2;
    CHECK_INCLUDE = 3;
    CHECK_EXCLUDE = 4;
  }

  enum When {
    INBOUND = 0;
    OUTBOUND = 1;
  }

  message Action {
    Operation operation = 1;
    When when = 2;
    string member = 3;
  }

  repeated Action actions = 1;
}